--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <!-- <link rel="icon"  href="../src/Assets/favicon.png" /> -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Figure API"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Figure API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
